--- a/README
+++ b/README
@@ -1,47 +1,57 @@
-Unit 5 - Instagram
-Instagram-Codepath is a photo sharing app similar to Instagram but using Parse as its backend.
+# Unit5 - *InstagramClone*
 
-Time spent: 5 hours spent in total
+**InstgramClone-Codepath** is a photo sharing app similar to Instagram but using Parse as its backend.
 
-User Stories
-The following required functionality is completed:
+Time spent: **5** hours spent in total
 
- User can sign up to create a new account using Parse authentication.
- User can log in and log out of his or her account.
- The current signed in user is persisted across app restarts.
- User can take a photo, add a caption, and post it to "Instagram".
-The following optional features are implemented:
+## User Stories
 
- User sees app icon in home screen and styled bottom navigation view
- Style the feed to look like the real Instagram feed.
- After the user submits a new post, show an indeterminate progress bar while the post is being uploaded to Parse.
-The following additional features are implemented:
+The following **required** functionality is completed:
 
- List anything else that you can get done to improve the app functionality!
-Video Walkthrough
+- [x] User can sign up to create a new account using Parse authentication.
+- [x] User can log in and log out of his or her account.
+- [x] The current signed in user is persisted across app restarts.
+- [x] User can take a photo, add a caption, and post it to "Instagram".
+
+The following **optional** features are implemented:
+
+- [x] User sees app icon in home screen and styled bottom navigation view
+- [x] Style the feed to look like the real Instagram feed.
+- [x] After the user submits a new post, show an indeterminate progress bar while the post is being uploaded to Parse.
+
+The following **additional** features are implemented:
+
+- [ ] List anything else that you can get done to improve the app functionality!
+
+## Video Walkthrough
+ There is an attached gif within the repository
+
+Here's a walkthrough of implemented user stories:
+
+<img src='mondo-instagram-codepath.gif' title='Video Walkthrough' width='' alt='Video Walkthrough' />
 
 
-Video Walkthrough is attached seperately. 
+## Notes
 
+  I did not have many challenges while building this application.
 
+## Open-source libraries used
 
-Notes
-Describe any challenges encountered while building the app.
+- [Android Async HTTP](https://github.com/loopj/android-async-http) - Simple asynchronous HTTP requests with JSON parsing
+- [Glide](https://github.com/bumptech/glide) - Image loading and caching library for Android
 
-Open-source libraries used
-Android Async HTTP - Simple asynchronous HTTP requests with JSON parsing
-Glide - Image loading and caching library for Android
-License
-Copyright [yyyy] [name of copyright owner]
+## License
 
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
+    Copyright [yyyy] [name of copyright owner]
 
-    http://www.apache.org/licenses/LICENSE-2.0
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
+        http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
