--- a/README
+++ b/README
@@ -24,11 +24,10 @@ The following **additional** features are implemented:
 - [ ] List anything else that you can get done to improve the app functionality!
 
 ## Video Walkthrough
- There is an attached gif within the repository
 
-Here's a walkthrough of implemented user stories:
+ There is an attached gif within the repository that shows the walkthrough.
 
-<img src='mondo-instagram-codepath.gif' title='Video Walkthrough' width='' alt='Video Walkthrough' />
+
 
 
 ## Notes
@@ -37,8 +36,6 @@ Here's a walkthrough of implemented user stories:
 
 ## Open-source libraries used
 
-- [Android Async HTTP](https://github.com/loopj/android-async-http) - Simple asynchronous HTTP requests with JSON parsing
-- [Glide](https://github.com/bumptech/glide) - Image loading and caching library for Android
 
 ## License
 
